refactor : 월드컵 컨텐츠에 동영상 링크 형식 지원
1. 기존 미디어 파일 엔티티 구조 변경 (상속 방식)
2. data.sql 데이터 수정 (보강 필요)